--- a/Frontend/src/pages/Auth.css
+++ b/Frontend/src/pages/Auth.css
@@ -162,7 +162,7 @@
 
 .input-icon {
   position: absolute;
-  /* left: 16px; */
+  left:-5px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1rem;
